--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -1,19 +1,29 @@
+<h2>Recruiter Homepage</h2>
+
 <p id="notice"><%= notice %></p>
+
+<br>
 
 <p>
   <strong>Name:</strong>
   <%= @recruiter.name %>
-</p>
-
-<p>
+  |
   <strong>Email:</strong>
   <%= @recruiter.email %>
 </p>
 
+<!--
 <p>
   <strong>Password:</strong>
   <%= @recruiter.password %>
 </p>
+-->
 
-<%= link_to 'Edit', edit_recruiter_path(@recruiter) %> |
-<%= link_to 'Back', recruiters_path %>
+<br>
+<h3>Actions</h3>
+<%= link_to 'Edit Profile', edit_recruiter_path(@recruiter) %>
+<br><br>
+<%= link_to 'Add Company', new_company_path %>
+<br><br>
+
+<!--<%= link_to 'Back', recruiters_path %>-->
