--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -20,10 +20,21 @@
 -->
 
 <br>
-<h3>Actions</h3>
-<%= link_to 'Edit Profile', edit_recruiter_path(@recruiter) %>
+<h3>Take Actions</h3>
+<%= link_to 'Edit My Profile', edit_recruiter_path(@recruiter) %>
+<br><br>
+<%= link_to 'Edit My Company', edit_company_path(@recruiter.company) %>
 <br><br>
 <%= link_to 'Add Company', new_company_path %>
 <br><br>
+<%= link_to 'Publish Jobs', new_job_path %>
+<br><br>
+<%= link_to 'View All Jobs', jobs_url %>
+<br><br>
+<%= link_to 'View Applicants' %>
+
+<br><br>
+<h3>Jobs Published By Me</h3>
+
 
 <!--<%= link_to 'Back', recruiters_path %>-->
