--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -23,7 +23,7 @@
 <h3>Take Actions</h3>
 <%= link_to 'Edit My Profile', edit_recruiter_path(@recruiter) %>
 <br><br>
-<%= link_to 'Edit My Company', edit_company_path(@recruiter.company) %>
+<%= link_to 'Edit My Company', edit_company_path(@recruiter.company_id) %>
 <br><br>
 <%= link_to 'Add Company', new_company_path %>
 <br><br>
