--- a/app/views/job_seekers/show.html.erb
+++ b/app/views/job_seekers/show.html.erb
@@ -1,18 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Fullname:</strong>
-  <%= @job_seeker.fullName %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @job_seeker.email %>
-</p>
-
-<p>
-  <strong>Password:</strong>
-  <%= @job_seeker.password %>
+  <strong>Name:</strong>
+  <%= @job_seeker.name %>
 </p>
 
 <p>
