--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -1,40 +1,9 @@
-<h2>Recruiter Homepage</h2>
-
 <p id="notice"><%= notice %></p>
-
-<br>
 
 <p>
   <strong>Name:</strong>
   <%= @recruiter.name %>
-  |
-  <strong>Email:</strong>
-  <%= @recruiter.email %>
 </p>
 
-<!--
-<p>
-  <strong>Password:</strong>
-  <%= @recruiter.password %>
-</p>
--->
-
-<br>
-<h3>Take Actions</h3>
-<%= link_to 'Edit My Profile', edit_recruiter_path(@recruiter) %>
-<br><br>
-<%= link_to 'Edit My Company', edit_company_path(@recruiter.company_id) %>
-<br><br>
-<%= link_to 'Add Company', new_company_path %>
-<br><br>
-<%= link_to 'Publish Jobs', new_job_path %>
-<br><br>
-<%= link_to 'View All Jobs', jobs_url %>
-<br><br>
-<%= link_to 'View Applicants' %>
-
-<br><br>
-<h3>Jobs Published By Me</h3>
-
-
-<!--<%= link_to 'Back', recruiters_path %>-->
+<%= link_to 'Edit', edit_recruiter_path(@recruiter) %> |
+<%= link_to 'Back', recruiters_path %>
