--- a/app/views/job_seekers/index.html.erb
+++ b/app/views/job_seekers/index.html.erb
@@ -5,10 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Fullname</th>
-      <th>Email</th>
-      <th>Password</th>
+      <th>Name</th>
       <th>Phone</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,13 +15,15 @@
   <tbody>
     <% @job_seekers.each do |job_seeker| %>
       <tr>
-        <td><%= job_seeker.fullName %></td>
-        <td><%= job_seeker.email %></td>
-        <td><%= job_seeker.password %></td>
+        <td><%= job_seeker.name %></td>
         <td><%= job_seeker.phone %></td>
+        <td><%= job_seeker.user.email %></td>
         <td><%= link_to 'Show', job_seeker %></td>
+
+        <% if job_seeker.user == current_user %>
         <td><%= link_to 'Edit', edit_job_seeker_path(job_seeker) %></td>
         <td><%= link_to 'Destroy', job_seeker, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
