--- a/app/views/recruiters/index.html.erb
+++ b/app/views/recruiters/index.html.erb
@@ -6,8 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Email</th>
-      <th>Password</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,11 +15,13 @@
     <% @recruiters.each do |recruiter| %>
       <tr>
         <td><%= recruiter.name %></td>
-        <td><%= recruiter.email %></td>
-        <td><%= recruiter.password %></td>
+        <td><%= recruiter.ruser.email %></td>
         <td><%= link_to 'Show', recruiter %></td>
+
+        <% if recruiter.ruser == current_ruser %>
         <td><%= link_to 'Edit', edit_recruiter_path(recruiter) %></td>
         <td><%= link_to 'Destroy', recruiter, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
