--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -1,9 +1,39 @@
+<h2>Recruiter Homepage</h2>
+
 <p id="notice"><%= notice %></p>
+
+<br>
 
 <p>
   <strong>Name:</strong>
   <%= @recruiter.name %>
 </p>
+
+<!--
+<p>
+  <strong>Password:</strong>
+  <%= @recruiter.password %>
+</p>
+-->
+
+<br>
+<h3>Take Actions</h3>
+<%= link_to 'Edit My Profile', edit_recruiter_path(@recruiter) %>
+<br><br>
+<%= link_to 'Edit My Company', edit_company_path(@recruiter.company_id) %>
+<br><br>
+<%= link_to 'Work for a new Company', new_company_path %>
+<br><br>
+<%= link_to 'Publish Jobs', new_job_path %>
+<br><br>
+<%= link_to 'View All Jobs', jobs_url %>
+<br><br>
+<%= link_to 'View Applicants' %>
+<br><br>
+<%= 'Select current company' %>
+<%= select_tag 'Company', options_for_select(Company.all.collect{ |c| [ c.name, c.id] }) %>
+<!-- <%= link_to '<button type="button">Save</button>'.html_safe, new_post_path %> -->
+<br><br>
 
 <%= link_to 'Edit', edit_recruiter_path(@recruiter) %> |
 <%= link_to 'Back', recruiters_path %>
