--- a/app/views/job_seekers/edit.html.erb
+++ b/app/views/job_seekers/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', job_seeker: @job_seeker %>
 
-<%= link_to 'Show', @job_seeker %> |
-<%= link_to 'Back', job_seekers_path %>
+<br>
+<%= link_to 'Back', @job_seeker %>
+<!--<%= link_to 'Back', job_seekers_path %>-->
