--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,97 +1,93 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Recruiting And Applicant Tracking System</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>RecruitingAndApplicantTrackingSystem</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
+<body>
 
-
-  <div align="center">
+<div align="center">
   <h1>Recruiting And Applicant Tracking System </h1>
-  </div>
+</div>
 
-  <!-- Flash messages - part of DEVISE -->
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+<!-- Flash messages - part of DEVISE -->
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
-    <% if params['controller'] == 'static_pages'
-         if current_auser != nil
-           auser_id = current_auser.id
-           if Admin.find_by_auser_id(auser_id) == nil
-             controller.redirect_to new_admin_path
-           else
-             a_id = Admin.find_by_auser_id(auser_id).id
-             controller.redirect_to admin_url(a_id)
-           end
+<% if params['controller'] == 'static_pages'
+     if current_auser != nil
+       auser_id = current_auser.id
+       if Admin.find_by_auser_id(auser_id) == nil
+         controller.redirect_to new_admin_path
+       else
+         a_id = Admin.find_by_auser_id(auser_id).id
+         controller.redirect_to admin_url(a_id)
+       end
 
-        elsif current_ruser != nil
-          ruser_id = current_ruser.id
-          if Recruiter.find_by_ruser_id(ruser_id) == nil
-            controller.redirect_to new_recruiter_path
-          else
-            rs_id = Recruiter.find_by_ruser_id(ruser_id).id
-            controller.redirect_to recruiter_url(rs_id)
-          end
-        elsif current_user != nil
-          user_id = current_user.id
-          if JobSeeker.find_by_user_id(user_id) == nil
-            controller.redirect_to new_job_seeker_path
-          else
-            js_id = JobSeeker.find_by_user_id(user_id).id
-            controller.redirect_to job_seeker_url(js_id)
-          end
-        end
-    end
-  %>
+     elsif current_ruser != nil
+       ruser_id = current_ruser.id
+       if Recruiter.find_by_ruser_id(ruser_id) == nil
+         controller.redirect_to new_recruiter_path
+       else
+         rs_id = Recruiter.find_by_ruser_id(ruser_id).id
+         controller.redirect_to recruiter_url(rs_id)
+       end
+     elsif current_user != nil
+       user_id = current_user.id
+       if JobSeeker.find_by_user_id(user_id) == nil
+         controller.redirect_to new_job_seeker_path
+       else
+         js_id = JobSeeker.find_by_user_id(user_id).id
+         controller.redirect_to job_seeker_url(js_id)
+       end
+     end
+   end
+%>
 
-  <br><br>
-
-  <% if current_page?(root_url) %>
-
-  <div align="left">
-  <%= link_to "Sign up as a Job Seeker", new_user_registration_path %> |
+<br><br>
+<div align="left">
+  <%= link_to "Sign up as a Job Seeker", new_user_registration_path %>
   <%= link_to "Sign in as a Job Seeker", new_user_session_path %>
   <!-- **************If user already signed in then only show sign out option ***********-->
   <% if user_signed_in? %>
-     | <%= link_to "Sign Out",destroy_user_session_path, :method => :delete %>
+    <%= link_to "Sign Out",destroy_user_session_path, :method => :delete %>
   <% end %>
-  </div>
-<br>
-  <div align="left">
-    <!--
+</div>
+
+<div align="left">
+  <!--
     <%= link_to "A Sign Up", new_auser_registration_path %>
      -->
-    <%= link_to "Sign In as Admin", new_auser_session_path %>
+  <%= link_to "Sign In as Admin", new_auser_session_path %>
 
-    <!-- **************If user already signed in then only show sign out option *************-->
+  <!-- **************If user already signed in then only show sign out option *************-->
 
-    <% if auser_signed_in? %>
-      <%= link_to "Sign Out",destroy_auser_session_path, :method => :delete %>
-    <% end %>
-  </div>
+  <% if auser_signed_in? %>
+    <%= link_to "Sign Out",destroy_auser_session_path, :method => :delete %>
+  <% end %>
+</div>
 
 
-<br>
-
-  <div align="left">
-  <%= link_to "Sign up as a Recruiter", new_ruser_registration_path %> |
+<div align="left">
+  <%= link_to "Sign up as a Recruiter", new_ruser_registration_path %>
   <%= link_to "Sign in as a Recruiter", new_ruser_session_path %>
   <!-- **************If user already signed in then only show sign out option *************-->
 
   <% if ruser_signed_in? %>
-     | <%= link_to "Sign Out",destroy_ruser_session_path, :method => :delete %>
+    <%= link_to "Sign Out",destroy_ruser_session_path, :method => :delete %>
   <% end %>
-  </div>
-  <br> <br> <br>
-    <%= yield %>
-  <br> <br> <br>
+</div>
 
-  <!--
+<br> <br> <br>
+
+<%= yield %>
+<br> <br> <br>
+
+<!--
   <%= link_to "List all Recruiters", recruiters_url %>
   <br>
   <%= link_to "Show all Job Seekers", job_seekers_url %>
@@ -102,49 +98,5 @@
   <br>
   <%= link_to "List all Jobs", jobs_url %>
   -->
-  <% end %>
-  </body>
-
-  <% if current_page?('/users/sign_up') %>
-  <%= render file: "/app/views/devise/registrations/new" %>
-  <% end %>
-
-
-  <% if current_page?('/users/sign_in') %>
-  <%= render file: "/app/views/devise/sessions/new" %>
-    <% if user_signed_in? %>
-      <%= link_to "Sign Out",destroy_user_session_path, :method => :delete %>
-    <% end %>
-  <% end %>
-
-
-  <% if current_page?('/ausers/sign_in') %>
-  <%= render file: "/app/views/devise/sessions/new" %>
-    <% if auser_signed_in? %>
-      <%= link_to "Sign Out",destroy_auser_session_path, :method => :delete %>
-    <% end %>
-  <% end %>
-
-
-  <% if current_page?('/rusers/sign_up') %>
-  <%= render file: "/app/views/devise/registrations/new" %>
-  <% end %>
-
-
-  <% if current_page?('/rusers/sign_in') %>
-  <%= render file: "/app/views/devise/sessions/new" %>
-  <% if ruser_signed_in? %>
-    <%= link_to "Sign Out",destroy_ruser_session_path, :method => :delete %>
-  <% end %>
-  <% end %>
-
-  <% if current_page?('/rusers/password/new') %>
-  <%= render file: "/app/views/devise/passwords/new" %>
-  <% end %>
-  <% if current_page?('/users/password/new') %>
-  <%= render file: "/app/views/devise/passwords/new" %>
-<% end %>
-<% if current_page?('/ausers/password/new') %>
-  <%= render file: "/app/views/devise/passwords/new" %>
-<% end %>
+</body>
 </html>
