--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -40,5 +40,5 @@
   <%= @company.synopsis %>
 </p>
 
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+<%= link_to 'Edit', edit_company_path(@company) %>
+<!-- <%= link_to 'Back', companies_path %> -->
