--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -17,7 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :website %>
+    <%= form.label :website %> <i>(Format: http://www.google.com)</i>
+    <br>
     <%= form.text_field :website, id: :company_website %>
   </div>
 
