--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -27,5 +27,5 @@
 <%= select_tag 'Company', options_for_select(Company.all.collect{ |c| [ c.name, c.id] }) %>-->
 <br><br>
 
-<%= link_to 'Edit', edit_recruiter_path(@recruiter) %> |
-<%= link_to 'Back', recruiters_path %>
+<!--<%= link_to 'Edit', edit_recruiter_path(@recruiter) %> |
+<%= link_to 'Back', recruiters_path %>-->
