Fixed the issue with deleting job seekers

--- a/app/views/job_seekers/show.html.erb
+++ b/app/views/job_seekers/show.html.erb
@@ -34,7 +34,7 @@ Company Size:
 <br>
 Location:
 <br>
-<input type = "button" value = "Search" onclick = searchJobs()>
+<input type = "button" value = "Search" onclick = "searchJobs()">
 <br>
 
 
