Fixed - Update Passwords and added RSpec

--- a/app/views/job_seekers/show.html.erb
+++ b/app/views/job_seekers/show.html.erb
@@ -20,6 +20,8 @@
 <h3>Take Action</h3>
 <ul>
   <li><%= link_to 'Edit My Profile', edit_job_seeker_path(@job_seeker) %></li>
+  <br>
+  <%= link_to "Change your password", edit_user_registration_path %>
   <!--<li><%= link_to 'Search For Jobs', jobs_url %></li>-->
 </ul>
 <!--<%= link_to 'Back', job_seekers_path %>-->
